# GAMES101

./: README.md
hw/pa0/: CMakeLists.txt
hw/pa0/src/: main.cpp
hw/pa1/: CMakeLists.txt
hw/pa1/src/: main.cpp
hw/pa2/: CMakeLists.txt
hw/pa2/src/: global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
hw/pa3/: CMakeLists.txt
hw/pa3/src/: Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
hw/pa4/: CMakeLists.txt
hw/pa4/src/: main.cpp
hw/pa5/: CMakeLists.txt
hw/pa5/src/: Renderer.cpp  Triangle.hpp
hw/pa6/src/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Renderer.hpp  Triangle.hpp  main.cpp
hw/pa7/: CMakeLists.txt
hw/pa7/src/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
notes/: references.typ  texture_mapping.typ
notes/conf/: conf.typ
